--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-is": "16.8",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
-    "styled-components": "^5.0.0",
+    "styled-components": "^6.0.0-rc.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
